# finitio-rs

./: .gitignore  Cargo.toml  README.md  adt.json  cargo.toml  example.fio
examples/: index.fio  main.fio  scalars.fio
src/: common.rs  lib.rs  main.rs
src/fio/: any.rs  base.rs  builtin.rs  common.rs  errors.rs  heading.rs  import.rs  mod.rs  nil.rs  ref.rs  relation.rs  schema.rs  seq.rs  set.rs  struct.rs  sub.rs  tuple.rs  type.rs  typedef.rs  union.rs
src/js/: any.rs  builtin.rs  constraint.rs  heading.rs  mod.rs  nil.rs  ref.rs  relation.rs  schema.rs  seq.rs  set.rs  struct.rs  sub.rs  tuple.rs  type.rs  union.rs
src/json/: any.rs  builtin.rs  heading.rs  mod.rs  nil.rs  ref.rs  relation.rs  schema.rs  seq.rs  set.rs  struct.rs  sub.rs  tuple.rs  type.rs  union.rs
src/json/builtins/: string.rs
src/schema/: any.rs  base.rs  builtin.rs  constraint.rs  errors.rs  heading.rs  mod.rs  nil.rs  ref.rs  relation.rs  schema.rs  seq.rs  set.rs  struct.rs  sub.rs  tuple.rs  type.rs  typedef.rs  typemap.rs  union.rs
src/syntax/: finitio.pest  mod.rs  parser.rs
tests/: test-system.rs
tests/features/test-system/: nil.feature
