[package]
name = "finitio"
version = "0.1.0"
authors = ["Louis Lambeau <louis.lambeau@enspirit.be>"]
description = "Finitio data language"
keywords = ["data", "language", "validation", "adt"]
license = "MIT/Apache-2.0"
repository = "https://github.com/enspirit/finitio-rs"
readme = "README.md"
edition = "2018"
homepage = "https://finitio.io/"
documentation = "https://docs.rs/finitio"

exclude = [
    "examples/*"
]

[dependencies]
nom = "7.0"
nom_locate = "4.0"
parse-hyperlinks = "0.23.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.12", features = ["derive"] }
snafu = { version = "0.7.3" }
serde-hashkey = "0.4.3"
resolver = "0.1"

[dev-dependencies]
cucumber = "0.15"
futures = "0.3"

[[test]]
name = "test-system"
harness = false
